--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                         </div>
 
                                         <div class="info-item padd-15">
-                                            <p>Website: <span>www.domain.com</span></p>
+                                            <p>Website: <span>piskevet.github.io/thomasedison/</span></p>
                                         </div>
 
                                         <div class="info-item padd-15">
